lib_LIBRARIES = libiofw.a
libiofw_a_SOURCES = iofw.h iofw.c ../../common/buffer.c ../../common/buffer.h \
		    ../../common/debug.c ../../common/debug.h ../../common/id.c \
		    ../../common/id.h ../../common/map.c ../../common/map.h \
		    ../../common/msg.c ../../common/msg.h ../../common/quicklist.h \
		    ../../common/quickhash.h ../../common/times.c ../../common/times.h
libiofw_a_CFLAGS = -I../../common
include_HEADERS = iofw.h


